--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,11 @@
       <button type="submit">Search</button>
     </form>
 
-    <span class="loader"></span>
-
     <ul class="gallery"></ul>
+
+    <button type="button" class="load-more" hidden>Load more</button>
+
+    <div class="loader"></div>
 
     <script type="module" src="./main.js"></script>
   </body>
